--- a/sympy.ipynb
+++ b/sympy.ipynb
@@ -235,18 +235,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}Z_{-}(\\omega) & Z_{+}(\\omega)\\\\dZ_{-}/dr & dZ_{+}/dr\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}Z_{-}(\\omega) & Z_{+}(\\omega)\\\\dZ_{-}/dr* & dZ_{+}/dr*\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "⎡Z_{-}(\\omega)  Z_{+}(\\omega)⎤\n",
        "⎢                            ⎥\n",
-       "⎣  dZ_{-}/dr      dZ_{+}/dr  ⎦"
+       "⎣ dZ_{-}/dr*     dZ_{+}/dr*  ⎦"
       ]
      },
      "metadata": {},
@@ -269,24 +269,24 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{dZ_{+}/dr}{Z_{+}(\\omega) dZ_{-}/dr - Z_{-}(\\omega) dZ_{+}/dr} & \\frac{Z_{+}(\\omega)}{Z_{+}(\\omega) dZ_{-}/dr - Z_{-}(\\omega) dZ_{+}/dr}\\\\\\frac{dZ_{-}/dr}{Z_{+}(\\omega) dZ_{-}/dr - Z_{-}(\\omega) dZ_{+}/dr} & - \\frac{Z_{-}(\\omega)}{Z_{+}(\\omega) dZ_{-}/dr - Z_{-}(\\omega) dZ_{+}/dr}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{dZ_{+}/dr*}{Z_{+}(\\omega) dZ_{-}/dr* - Z_{-}(\\omega) dZ_{+}/dr*} & \\frac{Z_{+}(\\omega)}{Z_{+}(\\omega) dZ_{-}/dr* - Z_{-}(\\omega) dZ_{+}/dr*}\\\\\\frac{dZ_{-}/dr*}{Z_{+}(\\omega) dZ_{-}/dr* - Z_{-}(\\omega) dZ_{+}/dr*} & - \\frac{Z_{-}(\\omega)}{Z_{+}(\\omega) dZ_{-}/dr* - Z_{-}(\\omega) dZ_{+}/dr*}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡                   -dZ_{+}/dr                                        Z_{+}(\\o\n",
-       "⎢─────────────────────────────────────────────────  ──────────────────────────\n",
-       "⎢Z_{+}(\\omega)⋅dZ_{-}/dr - Z_{-}(\\omega)⋅dZ_{+}/dr  Z_{+}(\\omega)⋅dZ_{-}/dr - \n",
+       "⎡                    -dZ_{+}/dr*                                         Z_{+}\n",
+       "⎢───────────────────────────────────────────────────  ────────────────────────\n",
+       "⎢Z_{+}(\\omega)⋅dZ_{-}/dr* - Z_{-}(\\omega)⋅dZ_{+}/dr*  Z_{+}(\\omega)⋅dZ_{-}/dr*\n",
        "⎢                                                                             \n",
-       "⎢                    dZ_{-}/dr                                       -Z_{-}(\\o\n",
-       "⎢─────────────────────────────────────────────────  ──────────────────────────\n",
-       "⎣Z_{+}(\\omega)⋅dZ_{-}/dr - Z_{-}(\\omega)⋅dZ_{+}/dr  Z_{+}(\\omega)⋅dZ_{-}/dr - \n",
+       "⎢                     dZ_{-}/dr*                                        -Z_{-}\n",
+       "⎢───────────────────────────────────────────────────  ────────────────────────\n",
+       "⎣Z_{+}(\\omega)⋅dZ_{-}/dr* - Z_{-}(\\omega)⋅dZ_{+}/dr*  Z_{+}(\\omega)⋅dZ_{-}/dr*\n",
        "\n",
-       "mega)                  ⎤\n",
-       "───────────────────────⎥\n",
-       "Z_{-}(\\omega)⋅dZ_{+}/dr⎥\n",
-       "                       ⎥\n",
-       "mega)                  ⎥\n",
-       "───────────────────────⎥\n",
-       "Z_{-}(\\omega)⋅dZ_{+}/dr⎦"
+       "(\\omega)                   ⎤\n",
+       "───────────────────────────⎥\n",
+       " - Z_{-}(\\omega)⋅dZ_{+}/dr*⎥\n",
+       "                           ⎥\n",
+       "(\\omega)                   ⎥\n",
+       "───────────────────────────⎥\n",
+       " - Z_{-}(\\omega)⋅dZ_{+}/dr*⎦"
       ]
      },
      "metadata": {},
@@ -295,7 +295,7 @@
    ],
    "source": [
     "Z_minus, Z_plus = symbols(\"Z_{-}(\\omega)\"), symbols(\"Z_{+}(\\omega)\")\n",
-    "Zprime_minus, Zprime_plus = symbols(\"dZ_{-}/dr\"), symbols(\"dZ_{+}/dr\")\n",
+    "Zprime_minus, Zprime_plus = symbols(\"dZ_{-}/dr*\"), symbols(\"dZ_{+}/dr*\")\n",
     "Z, zprime = symbols(\"Z(\\omega)\"), symbols(r\"dZ/dr*\")\n",
     "Mat = Matrix([[Z_minus, Z_plus], [Zprime_minus, Zprime_plus]])\n",
     "Vec = Matrix([Z,zprime])\n",
@@ -305,30 +305,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{Z(\\omega) dZ_{+}/dr}{Z_{+}(\\omega) dZ_{-}/dr - Z_{-}(\\omega) dZ_{+}/dr} + \\frac{Z_{+}(\\omega) dZ/dr*}{Z_{+}(\\omega) dZ_{-}/dr - Z_{-}(\\omega) dZ_{+}/dr}\\\\- \\frac{Z(\\omega) dZ_{-}/dr}{- Z_{+}(\\omega) dZ_{-}/dr + Z_{-}(\\omega) dZ_{+}/dr} + \\frac{Z_{-}(\\omega) dZ/dr*}{- Z_{+}(\\omega) dZ_{-}/dr + Z_{-}(\\omega) dZ_{+}/dr}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}- \\frac{Z(\\omega) dZ_{+}/dr*}{Z_{+}(\\omega) dZ_{-}/dr* - Z_{-}(\\omega) dZ_{+}/dr*} + \\frac{Z_{+}(\\omega) dZ/dr*}{Z_{+}(\\omega) dZ_{-}/dr* - Z_{-}(\\omega) dZ_{+}/dr*}\\\\- \\frac{Z(\\omega) dZ_{-}/dr*}{- Z_{+}(\\omega) dZ_{-}/dr* + Z_{-}(\\omega) dZ_{+}/dr*} + \\frac{Z_{-}(\\omega) dZ/dr*}{- Z_{+}(\\omega) dZ_{-}/dr* + Z_{-}(\\omega) dZ_{+}/dr*}\\end{matrix}\\right]$"
       ],
       "text/plain": [
-       "⎡                  Z(\\omega)⋅dZ_{+}/dr                                 Z_{+}(\\\n",
-       "⎢ - ───────────────────────────────────────────────── + ──────────────────────\n",
-       "⎢   Z_{+}(\\omega)⋅dZ_{-}/dr - Z_{-}(\\omega)⋅dZ_{+}/dr   Z_{+}(\\omega)⋅dZ_{-}/d\n",
+       "⎡                   Z(\\omega)⋅dZ_{+}/dr*                                  Z_{+\n",
+       "⎢ - ─────────────────────────────────────────────────── + ────────────────────\n",
+       "⎢   Z_{+}(\\omega)⋅dZ_{-}/dr* - Z_{-}(\\omega)⋅dZ_{+}/dr*   Z_{+}(\\omega)⋅dZ_{-}\n",
        "⎢                                                                             \n",
-       "⎢                 Z(\\omega)⋅dZ_{-}/dr                                  Z_{-}(\\\n",
-       "⎢- ────────────────────────────────────────────────── + ──────────────────────\n",
-       "⎣  -Z_{+}(\\omega)⋅dZ_{-}/dr + Z_{-}(\\omega)⋅dZ_{+}/dr   -Z_{+}(\\omega)⋅dZ_{-}/\n",
+       "⎢                  Z(\\omega)⋅dZ_{-}/dr*                                   Z_{-\n",
+       "⎢- ──────────────────────────────────────────────────── + ────────────────────\n",
+       "⎣  -Z_{+}(\\omega)⋅dZ_{-}/dr* + Z_{-}(\\omega)⋅dZ_{+}/dr*   -Z_{+}(\\omega)⋅dZ_{-\n",
        "\n",
-       "omega)⋅dZ/dr*               ⎤\n",
-       "─────────────────────────── ⎥\n",
-       "r - Z_{-}(\\omega)⋅dZ_{+}/dr ⎥\n",
-       "                            ⎥\n",
-       "omega)⋅dZ/dr*               ⎥\n",
-       "────────────────────────────⎥\n",
-       "dr + Z_{-}(\\omega)⋅dZ_{+}/dr⎦"
+       "}(\\omega)⋅dZ/dr*                ⎤\n",
+       "─────────────────────────────── ⎥\n",
+       "/dr* - Z_{-}(\\omega)⋅dZ_{+}/dr* ⎥\n",
+       "                                ⎥\n",
+       "}(\\omega)⋅dZ/dr*                ⎥\n",
+       "────────────────────────────────⎥\n",
+       "}/dr* + Z_{-}(\\omega)⋅dZ_{+}/dr*⎦"
       ]
      },
      "metadata": {},
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
