Major Bug Fix (Mathematical Error)

--- a/sympy.ipynb
+++ b/sympy.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -61,22 +61,20 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{\\left(\\frac{G m{\\left(r \\right)}}{c^{2} r} + \\frac{4 \\pi G r^{2} p{\\left(r \\right)}}{c^{4}}\\right) e^{\\frac{1}{2 \\sqrt{- \\frac{2 G m{\\left(r \\right)}}{c^{2} r} + 1}}}}{r^{3}}$"
+       "$\\displaystyle \\frac{\\frac{G m{\\left(r \\right)}}{c^{2} r} + \\frac{4 \\pi G r^{2} p{\\left(r \\right)}}{c^{4}}}{r^{3} \\sqrt[4]{- \\frac{2 G m{\\left(r \\right)}}{c^{2} r} + 1}}$"
       ],
       "text/plain": [
-       "                                     1           \n",
-       "                          ───────────────────────\n",
-       "                                 ________________\n",
-       "                                ╱   2⋅G⋅m(r)     \n",
-       "                          2⋅   ╱  - ──────── + 1 \n",
-       "⎛                2     ⎞      ╱        2         \n",
-       "⎜G⋅m(r)   4⋅π⋅G⋅r ⋅p(r)⎟    ╲╱        c ⋅r       \n",
-       "⎜────── + ─────────────⎟⋅ℯ                       \n",
-       "⎜  2             4     ⎟                         \n",
-       "⎝ c ⋅r          c      ⎠                         \n",
-       "─────────────────────────────────────────────────\n",
-       "                         3                       \n",
-       "                        r                        "
+       "                 2      \n",
+       " G⋅m(r)   4⋅π⋅G⋅r ⋅p(r) \n",
+       " ────── + ───────────── \n",
+       "   2             4      \n",
+       "  c ⋅r          c       \n",
+       "────────────────────────\n",
+       "        ________________\n",
+       " 3     ╱   2⋅G⋅m(r)     \n",
+       "r ⋅   ╱  - ──────── + 1 \n",
+       "   4 ╱        2         \n",
+       "   ╲╱        c ⋅r       "
       ]
      },
      "metadata": {},
@@ -85,68 +83,44 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{G \\left(G \\left(c^{2} m{\\left(r \\right)} + 4 \\pi r^{3} p{\\left(r \\right)}\\right) \\left(r \\frac{d}{d r} m{\\left(r \\right)} - m{\\left(r \\right)}\\right) - 6 c^{2} r \\left(\\frac{- 2 G m{\\left(r \\right)} + c^{2} r}{c^{2} r}\\right)^{\\frac{3}{2}} \\left(c^{2} m{\\left(r \\right)} + 4 \\pi r^{3} p{\\left(r \\right)}\\right) + 2 c^{2} r \\left(\\frac{- 2 G m{\\left(r \\right)} + c^{2} r}{c^{2} r}\\right)^{\\frac{3}{2}} \\left(c^{2} r \\frac{d}{d r} m{\\left(r \\right)} - c^{2} m{\\left(r \\right)} + 4 \\pi r^{3} \\left(r \\frac{d}{d r} p{\\left(r \\right)} + 2 p{\\left(r \\right)}\\right)\\right)\\right) e^{\\frac{1}{2 \\sqrt{\\frac{- 2 G m{\\left(r \\right)} + c^{2} r}{c^{2} r}}}}}{2 c^{6} r^{6} \\left(\\frac{- 2 G m{\\left(r \\right)} + c^{2} r}{c^{2} r}\\right)^{\\frac{3}{2}}}$"
+       "$\\displaystyle \\frac{G \\left(G \\left(c^{2} m{\\left(r \\right)} + 4 \\pi r^{3} p{\\left(r \\right)}\\right) \\left(r \\frac{d}{d r} m{\\left(r \\right)} - m{\\left(r \\right)}\\right) - 6 \\left(- 2 G m{\\left(r \\right)} + c^{2} r\\right) \\left(c^{2} m{\\left(r \\right)} + 4 \\pi r^{3} p{\\left(r \\right)}\\right) + 2 \\left(- 2 G m{\\left(r \\right)} + c^{2} r\\right) \\left(c^{2} r \\frac{d}{d r} m{\\left(r \\right)} - c^{2} m{\\left(r \\right)} + 4 \\pi r^{3} \\left(r \\frac{d}{d r} p{\\left(r \\right)} + 2 p{\\left(r \\right)}\\right)\\right)\\right)}{2 c^{6} r^{6} \\left(\\frac{- 2 G m{\\left(r \\right)} + c^{2} r}{c^{2} r}\\right)^{\\frac{5}{4}}}$"
       ],
       "text/plain": [
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "  ⎛                                                                         3/\n",
-       "  ⎜                                                       ⎛             2  ⎞  \n",
-       "  ⎜  ⎛ 2             3     ⎞ ⎛  d              ⎞      2   ⎜-2⋅G⋅m(r) + c ⋅r⎟  \n",
-       "G⋅⎜G⋅⎝c ⋅m(r) + 4⋅π⋅r ⋅p(r)⎠⋅⎜r⋅──(m(r)) - m(r)⎟ - 6⋅c ⋅r⋅⎜────────────────⎟  \n",
-       "  ⎜                          ⎝  dr             ⎠          ⎜       2        ⎟  \n",
-       "  ⎝                                                       ⎝      c ⋅r      ⎠  \n",
+       "  ⎛  ⎛ 2             3     ⎞ ⎛  d              ⎞     ⎛             2  ⎞ ⎛ 2   \n",
+       "G⋅⎜G⋅⎝c ⋅m(r) + 4⋅π⋅r ⋅p(r)⎠⋅⎜r⋅──(m(r)) - m(r)⎟ - 6⋅⎝-2⋅G⋅m(r) + c ⋅r⎠⋅⎝c ⋅m(\n",
+       "  ⎝                          ⎝  dr             ⎠                              \n",
        "──────────────────────────────────────────────────────────────────────────────\n",
        "                                                                              \n",
        "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
+       "                                                                            6 \n",
+       "                                                                         2⋅c ⋅\n",
        "                                                                              \n",
        "                                                                              \n",
        "\n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "                                                                              \n",
-       "2                                                    3/2                      \n",
-       "                                   ⎛             2  ⎞                         \n",
-       "  ⎛ 2             3     ⎞      2   ⎜-2⋅G⋅m(r) + c ⋅r⎟    ⎛ 2   d           2  \n",
-       " ⋅⎝c ⋅m(r) + 4⋅π⋅r ⋅p(r)⎠ + 2⋅c ⋅r⋅⎜────────────────⎟   ⋅⎜c ⋅r⋅──(m(r)) - c ⋅m\n",
-       "                                   ⎜       2        ⎟    ⎝     dr             \n",
-       "                                   ⎝      c ⋅r      ⎠                         \n",
+       "          3     ⎞     ⎛             2  ⎞ ⎛ 2   d           2             3 ⎛  \n",
+       "r) + 4⋅π⋅r ⋅p(r)⎠ + 2⋅⎝-2⋅G⋅m(r) + c ⋅r⎠⋅⎜c ⋅r⋅──(m(r)) - c ⋅m(r) + 4⋅π⋅r ⋅⎜r⋅\n",
+       "                                         ⎝     dr                          ⎝  \n",
        "──────────────────────────────────────────────────────────────────────────────\n",
-       "                                           3/2                                \n",
-       "                         ⎛             2  ⎞                                   \n",
-       "                    6  6 ⎜-2⋅G⋅m(r) + c ⋅r⎟                                   \n",
-       "                 2⋅c ⋅r ⋅⎜────────────────⎟                                   \n",
-       "                         ⎜       2        ⎟                                   \n",
-       "                         ⎝      c ⋅r      ⎠                                   \n",
+       "                     5/4                                                      \n",
+       "   ⎛             2  ⎞                                                         \n",
+       " 6 ⎜-2⋅G⋅m(r) + c ⋅r⎟                                                         \n",
+       "r ⋅⎜────────────────⎟                                                         \n",
+       "   ⎜       2        ⎟                                                         \n",
+       "   ⎝      c ⋅r      ⎠                                                         \n",
        "\n",
-       "                                                  1             \n",
-       "                                      ──────────────────────────\n",
-       "                                              __________________\n",
-       "                                             ╱              2   \n",
-       "                                            ╱  -2⋅G⋅m(r) + c ⋅r \n",
-       "                                   ⎞  2⋅   ╱   ──────────────── \n",
-       "                                   ⎟      ╱           2         \n",
-       "           3 ⎛  d                ⎞⎞⎟    ╲╱           c ⋅r       \n",
-       "(r) + 4⋅π⋅r ⋅⎜r⋅──(p(r)) + 2⋅p(r)⎟⎟⎟⋅ℯ                          \n",
-       "             ⎝  dr               ⎠⎠⎟                            \n",
-       "                                   ⎠                            \n",
-       "────────────────────────────────────────────────────────────────\n",
-       "                                                                \n",
-       "                                                                \n",
-       "                                                                \n",
-       "                                                                \n",
-       "                                                                \n",
-       "                                                                "
+       "d                ⎞⎞⎞\n",
+       "──(p(r)) + 2⋅p(r)⎟⎟⎟\n",
+       "dr               ⎠⎠⎠\n",
+       "────────────────────\n",
+       "                    \n",
+       "                    \n",
+       "                    \n",
+       "                    \n",
+       "                    \n",
+       "                    "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +128,7 @@
    "source": [
     "b_sub = G * m / (c**2 * r)\n",
     "Q_sub = b + 4 * pi * G * (r**2)/(c**4) * p\n",
-    "lamda_sub = 1/sqrt(1-2*b)\n",
+    "lamda_sub = ln(1/sqrt(1-2*b))\n",
     "expr = exp(lamda/2)*Q/(r**3)\n",
     "display(expr)\n",
     "expr = expr.subs(Q, Q_sub)\n",
@@ -167,14 +141,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "G*(G*(dMdr*r - m)*(4*pi*P*r**3 + c**2*m) - 6*c**2*r*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*(4*pi*P*r**3 + c**2*m) + 2*c**2*r*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*(c**2*dMdr*r - c**2*m + 4*pi*r**3*(2*P + dPdr*r)))*exp(1/(2*sqrt((-2*G*m + c**2*r)/(c**2*r))))/(2*c**6*r**6*((-2*G*m + c**2*r)/(c**2*r))**(3/2))\n"
+      "G*(G*(dMdr*r - m)*(4*pi*P*r**3 + c**2*m) - 6*(-2*G*m + c**2*r)*(4*pi*P*r**3 + c**2*m) + 2*(-2*G*m + c**2*r)*(c**2*dMdr*r - c**2*m + 4*pi*r**3*(2*P + dPdr*r)))/(2*c**6*r**6*((-2*G*m + c**2*r)/(c**2*r))**(5/4))\n"
      ]
     }
    ],
@@ -250,14 +224,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(G*(dMdr*r - m)*Derivative(\\nu(r), r)/2 + c**2*r**2*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*Derivative(\\nu(r), (r, 2)) - 2*c**2*r*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*Derivative(\\nu(r), r))*exp(1/(2*sqrt((-2*G*m + c**2*r)/(c**2*r))))/(c**2*r**4*((-2*G*m + c**2*r)/(c**2*r))**(3/2))\n"
+      "(G*dnudr*(dMdr*r - m)/2 - 2*c**2*dnudr*r*((-2*G*m + c**2*r)/(c**2*r))**(3/2) + c**2*r**2*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*Derivative(dnudr, r))*exp(1/(2*sqrt((-2*G*m + c**2*r)/(c**2*r))))/(c**2*r**4*((-2*G*m + c**2*r)/(c**2*r))**(3/2))\n"
      ]
     }
    ],
@@ -265,7 +239,7 @@
     "print(dr_expr\\\n",
     "      .subs(m.diff(r), symbols(\"dMdr\"))\\\n",
     "      .subs(p.diff(r), symbols(\"dPdr\"))\\\n",
-    "#       .subs(nu.diff(r), symbols(\"dnudr\"))\\\n",
+    "      .subs(nu.diff(r), symbols(\"dnudr\"))\\\n",
     "      .subs(m, symbols(\"m\"))\\\n",
     "      .subs(p, symbols(\"P\")))"
    ]
