GR (Pseudo-Stable Case)

--- a/sympy.ipynb
+++ b/sympy.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "                    "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -187,21 +187,18 @@
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\frac{e^{\\frac{1}{2 \\sqrt{- \\frac{2 G m{\\left(r \\right)}}{c^{2} r} + 1}}} \\frac{d}{d r} \\nu{\\left(r \\right)}}{r^{2}}$"
+       "$\\displaystyle \\frac{\\frac{d}{d r} \\nu{\\left(r \\right)}}{r^{2} \\sqrt[4]{- \\frac{2 G m{\\left(r \\right)}}{c^{2} r} + 1}}$"
       ],
       "text/plain": [
-       "            1                      \n",
-       " ───────────────────────           \n",
-       "        ________________           \n",
-       "       ╱   2⋅G⋅m(r)                \n",
-       " 2⋅   ╱  - ──────── + 1            \n",
-       "     ╱        2                    \n",
-       "   ╲╱        c ⋅r        d         \n",
-       "ℯ                       ⋅──(\\nu(r))\n",
-       "                         dr        \n",
-       "───────────────────────────────────\n",
-       "                  2                \n",
-       "                 r                 "
+       "       d                \n",
+       "       ──(\\nu(r))       \n",
+       "       dr               \n",
+       "────────────────────────\n",
+       "        ________________\n",
+       " 2     ╱   2⋅G⋅m(r)     \n",
+       "r ⋅   ╱  - ──────── + 1 \n",
+       "   4 ╱        2         \n",
+       "   ╲╱        c ⋅r       "
       ]
      },
      "metadata": {},
@@ -211,7 +208,7 @@
    "source": [
     "b_sub = G * m / (c**2 * r)\n",
     "Q_sub = b + 4 * pi * G * (r**2)/(c**4) * p\n",
-    "lamda_sub = 1/sqrt(1-2*b)\n",
+    "lamda_sub = ln(1/sqrt(1-2*b))\n",
     "dnudr = nu.diff(r)\n",
     "expr = exp(lamda/2)*dnudr/(r**2)\n",
     "display(expr)\n",
@@ -224,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(G*dnudr*(dMdr*r - m)/2 - 2*c**2*dnudr*r*((-2*G*m + c**2*r)/(c**2*r))**(3/2) + c**2*r**2*((-2*G*m + c**2*r)/(c**2*r))**(3/2)*Derivative(dnudr, r))*exp(1/(2*sqrt((-2*G*m + c**2*r)/(c**2*r))))/(c**2*r**4*((-2*G*m + c**2*r)/(c**2*r))**(3/2))\n"
+      "(G*dnudr*(dMdr*r - m)/2 - 2*dnudr*(-2*G*m + c**2*r) + r*(-2*G*m + c**2*r)*Derivative(dnudr, r))/(c**2*r**4*((-2*G*m + c**2*r)/(c**2*r))**(5/4))\n"
      ]
     }
    ],
@@ -429,6 +426,142 @@
     "      .subs(Z, symbols(\"zFinal\"))\\\n",
     "      .subs(zprime, symbols(\"zPrimeFinal\")))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\left[\\begin{matrix}\\frac{k}{g k - h} & - \\frac{1}{g k - h}\\\\- \\frac{h}{g k - h} & \\frac{g}{g k - h}\\end{matrix}\\right]$"
+      ],
+      "text/plain": [
+       "⎡   k       -1   ⎤\n",
+       "⎢───────  ───────⎥\n",
+       "⎢g⋅k - h  g⋅k - h⎥\n",
+       "⎢                ⎥\n",
+       "⎢  -h        g   ⎥\n",
+       "⎢───────  ───────⎥\n",
+       "⎣g⋅k - h  g⋅k - h⎦"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "K = symbols(\"K\")\n",
+    "H1 = symbols(\"H_1\")\n",
+    "g = symbols(\"g\")\n",
+    "h = symbols(\"h\")\n",
+    "k = symbols(\"k\")\n",
+    "n = symbols(\"n\")\n",
+    "b = symbols(\"b\")\n",
+    "Z = symbols(\"Z\")\n",
+    "Zprime = symbols(\"dZ/dr\")\n",
+    "\n",
+    "g_sub = (n * (n+1) + 3*n*b + 6*(b**2))/((n + 3*b))\n",
+    "h_sub = (n - 3*n*b - 3*(b**2))/((1-2*b) * (n+3*b))\n",
+    "k_sub = 1/(1-2*b)\n",
+    "\n",
+    "VEC = Matrix([K,H1])\n",
+    "MAT = Matrix([[g, 1], [h, k]])\n",
+    "MAT.inv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{r \\left(- H_{1} + K k\\right)}{g k - h}$"
+      ],
+      "text/plain": [
+       "r⋅(-H₁ + K⋅k)\n",
+       "─────────────\n",
+       "   g⋅k - h   "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{H_{1} g - K h}{g k - h}$"
+      ],
+      "text/plain": [
+       "H₁⋅g - K⋅h\n",
+       "──────────\n",
+       " g⋅k - h  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Z0 = simplify((MAT.inv()*VEC)[0] * r)\n",
+    "dZdr0 = simplify((MAT.inv()*VEC)[1])\n",
+    "display(Z0, dZdr0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r*(Kr/(1 - 2*b) - h1r)/(-(-3*b**2 - 3*b*n + n)/((1 - 2*b)*(3*b + n)) + (6*b**2 + 3*b*n + n*(n + 1))/((1 - 2*b)*(3*b + n)))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Z0\n",
+    "      .subs(H1, symbols(\"h1r\"))\\\n",
+    "      .subs(K, symbols(\"Kr\"))\\\n",
+    "      .subs(g, g_sub)\\\n",
+    "      .subs(h, h_sub)\\\n",
+    "      .subs(k, k_sub))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-Kr*(-3*b**2 - 3*b*n + n)/((1 - 2*b)*(3*b + n)) + h1r*(6*b**2 + 3*b*n + n*(n + 1))/(3*b + n))/(-(-3*b**2 - 3*b*n + n)/((1 - 2*b)*(3*b + n)) + (6*b**2 + 3*b*n + n*(n + 1))/((1 - 2*b)*(3*b + n)))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dZdr0\n",
+    "      .subs(H1, symbols(\"h1r\"))\\\n",
+    "      .subs(K, symbols(\"Kr\"))\\\n",
+    "      .subs(g, g_sub)\\\n",
+    "      .subs(h, h_sub)\\\n",
+    "      .subs(k, k_sub))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
